# tpeg

./: .gitignore  CMakeLists.txt  bpeg.ptest  peg.ptest  peg.test  test
include/: bc_parse.hpp  expression_machine.hpp  parse_machine.hpp  pegtest.hpp  tpeg.hpp
src/: bc_parse.cpp  expression_machine.cpp  parse_machine.cpp  pegtest.cpp  runner.cpp  tpeg.cpp
tests/: CMakeLists.txt  bc_parse_test.h  parse_machine_test.h  patterns_test.h  tests.cpp  ttest.cpp
